<resources>
    <string name="app_name">Taschenrechner Elmedina</string>

    <string name="DividentZahl">DividentZahl</string>
    <string name="DivisorZahl">DivisorZahl</string>
    <string name="Ergebnis">Das Ergebnis lautet:</string>
    <string name="Dividieren">Dividieren!</string>
    <string name="Reset">Reset all</string>
    <string name="D.Rechner">Divisionsrechner</string>
    <string name="Divident">Divident</string>
    <string name="Divisor">Divisor</string>
    <string name="zahl1" />
    <string name="zahl2" />



</resources>


